--- a/front/sass/media.sass
+++ b/front/sass/media.sass
@@ -7,21 +7,17 @@
         &__search
           width: 550px
     .container-google
-      //padding: 0 20px 0 9%
       padding-left: calc((100vw - 1068px) / 2)
 
 @media screen and (max-width: 1120px)
   .box-google
     .header
       &-search
-        //&__wrapper
-        //  width: 1111px
         &-logo
           margin-left: 10px
         &__search
           width: 550px
     .container-google
-      //padding: 0 20px 0 9%
       padding-left: 25px
 
 @media screen and (max-width: 1120px) and (orientation: landscape)
@@ -30,3 +26,254 @@
       &-search
         &__wrapper
           width: 1111px
+
+@media screen and (max-width: 645px) and (orientation: portrait)
+  .box-google
+    overflow-x: hidden
+    .container-google
+      padding: 0
+    .header-search
+      padding: 0 15px
+      &__wrapper
+        margin-top: 0
+        justify-content: center
+        align-items: end
+        flex-direction: column-reverse
+        height: 108px
+        width: 100%
+      &-logo
+        position: absolute
+        display: flex
+        width: 150px
+        top: 20px
+        margin: 0
+        left: 50%
+        transform: translate(-50%)
+      &__search
+        width: 100%
+        padding: 9px 12px
+        &-svgmob
+          display: flex
+          width: 41px
+          height: 30px
+          fill: $color24
+          margin-right: 12px
+        &-prompt
+          width: 100%
+          border-right: none
+          p
+            overflow-x: hidden
+            white-space: nowrap
+          svg
+           display: none
+        &-types
+          width: 100px
+          margin-left: 12px
+          justify-content: end
+          img
+            display: none
+          svg
+            height: 44px
+            width: 48px
+            padding: 0 12px
+            &:nth-last-child(1)
+              display: none
+            &:nth-last-child(2)
+              display: none
+      &__account
+        display: flex
+        align-items: center
+        margin-right: 0
+        margin-bottom: 22px
+        margin-left: 0
+        width: 100%
+        justify-content: space-between
+        svg
+          display: none
+        .burger
+          display: block
+          padding: 0
+    main
+      background-color: $color22
+    .filters-google
+      background-color: $color2
+      border-bottom: 1px solid $color8
+      width: 100%
+      font-family: $font-googleSans
+      margin-bottom: 12px
+      &__wrapper
+        padding: 0 0 6px 10px
+        margin-top: 0
+        width: 100%
+        div
+          padding: 0 12px 6px 12px
+          border-bottom: 3px solid rgba(0, 0, 0, 0)
+          font-size: 16px
+          &:first-child
+            padding: 0 10px 5px 10px
+            color: #111
+            border-bottom: 1 solid rgba(0, 0, 0, 0)
+    .result-google
+      &__wrapper
+        margin-top: -10px
+      &__item
+        width: 100%
+        margin-bottom: 8px
+        &:nth-child(2)
+          display: none
+        &-link
+          &-svg
+            margin-left: auto
+            margin-right: 0
+            margin-bottom: 0
+        &-description
+          width: 100%
+          &-img
+            //width: 30%
+            //height: fit-content
+          &-txt
+            //width: auto
+            margin-left: 15px
+      &__fiq
+        width: 100%
+        background-color: $color2
+        padding: 20px 15px 11px 18px
+        margin-bottom: 8px
+        &-title
+          display: flex
+          justify-content: space-between
+        .q
+          &:last-child
+            margin-bottom: 0
+          &-txt
+            max-width: 300px
+    .also-google
+      width: 100%
+      background-color: $color2
+      margin-bottom: 11px
+      &__wrapper
+        width: 100%
+        margin: 0
+        padding: 13px 15px 10px 18px
+        height: auto
+      &__title
+        width: 100%
+        display: flex
+        justify-content: space-between
+      &__box
+        &-item
+          background-color: $color2
+          position: relative
+          width: 100%
+          &:nth-child(7), &:nth-child(8)
+            display: none
+          &:nth-child(6)
+            &:after
+              display: none
+          &:after
+            content: ""
+            display: block
+            position: absolute
+            bottom: -3px
+            left: 0
+            width: 100%
+            height: 1px
+            background-color: $color8
+          svg
+            flex-shrink: 0
+      &__more
+        display: none
+    .more-google
+      margin-top: 0
+      display: flex
+      justify-content: center
+      align-items: center
+      padding: 20px 15px
+      width: 100%
+      background-color: $color2
+      &__wrapper
+        height: 44px
+        background-color: $color22
+        width: 100%
+        border-radius: 20px
+        display: flex
+        justify-content: center
+        align-items: center
+        font-size: 14px
+        font-family: $font-googleSans
+        svg
+          width: 20px
+          height: 20px
+          fill: $color19
+          margin-left: 5px
+    .footer-google
+      background-color: $color20
+      margin-top: 0
+      height: 140px
+      width: 100%
+      padding: 12px 0
+      display: flex
+      justify-content: center
+      align-items: flex-start
+      flex-direction: column
+      .container-google
+        width: 100%
+        height: 100%
+      &:before
+        display: none
+      &__wrapper
+        display: none
+        &-mob
+          display: flex
+          flex-direction: column
+          justify-content: space-around
+          align-items: center
+          margin-left: 0
+          height: 100%
+          .footer-google-mob
+            &__country
+              color: $color21
+              font-size: 15px
+            &__city-info
+              font-size: 14px
+              color: $color10
+              span
+                color: $color21
+                font-family: $font-arial-bold
+                position: relative
+                &::before
+                  content: ""
+                  display: block
+                  position: absolute
+                  bottom: 3px
+                  left: -13px
+                  width: 9px
+                  height: 9px
+                  background-color: $color21
+                  border-radius: 50%
+
+
+@media screen and (max-width: 395px) and (orientation: portrait)
+  .box-google
+    .result-google
+      &__fiq
+        .q-txt
+          max-width: 179px
+
+
+@media screen and (max-width: 300px) and (orientation: portrait)
+  .box-google
+    .footer-google
+      &-mob__city-info
+        text-align: center
+        width: 80%
+    .result-google
+      &__fiq
+        .q-txt
+          max-width: 119px
+
+
+
+
+
+
