--- a/front/sass/pages/index.sass
+++ b/front/sass/pages/index.sass
@@ -13,7 +13,7 @@ $color12: #111111
 $color13: #202124
 $color14: #1a0dab
 $color15: #4d5156
-//$color16: #0060f0
+//$color16: #5386DF
 $color17: #e2eeff
 $color18: #f7f8f9
 $color19: #747878
@@ -189,6 +189,8 @@ header *, footer *
           width: 48px
           height: 48px
           fill: $color11
+        .burger
+          display: none
         div
           color: $color2
           width: 32px
@@ -435,6 +437,8 @@ header *, footer *
       justify-content: center
       img
         margin: 0 auto
+  .more-google
+    display: none
   .footer-google
     margin-top: 68px
     background-color: $color20
@@ -460,6 +464,8 @@ header *, footer *
       justify-content: flex-start
       align-items: center
       margin-left: 20px
+      &-mob
+        display: none
     &__country
       padding-right: 12px
       color: $color21
