--- a/front/sass/media.sass
+++ b/front/sass/media.sass
@@ -27,6 +27,15 @@
         &__wrapper
           width: 1111px
 
+@media screen and (max-width: 853px) and (orientation: portrait)
+  .box-google
+    .header-search
+      &__search
+        width: 60%
+        &-types
+          width: 225px
+
+
 @media screen and (max-width: 645px) and (orientation: portrait)
   .box-google
     overflow-x: hidden
