--- a/front/sass/media.sass
+++ b/front/sass/media.sass
@@ -35,6 +35,8 @@
         &-types
           width: 225px
 
+@media screen and (max-width: 743px)
+  
 
 @media screen and (max-width: 645px) and (orientation: portrait)
   .box-google
