--- a/front/sass/pages/index.sass
+++ b/front/sass/pages/index.sass
@@ -339,7 +339,8 @@ header *, footer *
         padding-top: 6px
         margin-bottom: 20px
     &__fiq
-      width: 690px
+      max-width: 690px
+      width: 100%
       padding: 35px 15px 10px 18px
       color: $color26
       &-title
