--- a/front/pug/tempPages/index.pug
+++ b/front/pug/tempPages/index.pug
@@ -1,7 +1,7 @@
 extends ../template
 
 block head
-    - var title = 'Пін ап казино';
+    - var title = 'пін ап казино';
     
 block content
     include ../pages/BuildIndex
