--- a/front/sass/media.sass
+++ b/front/sass/media.sass
@@ -27,6 +27,130 @@
         &__wrapper
           width: 1111px
 
+@media screen and (max-width: 1040px) and (orientation: landscape)
+  .box-google
+    .container-google
+      padding: 0
+    .header-search
+      padding: 0 15px
+      width: 768px
+      margin: 0 auto
+      &__wrapper
+        margin-top: 0
+        justify-content: center
+        align-items: end
+        flex-direction: column-reverse
+        height: 108px
+        width: 100%
+      &-logo
+        position: absolute
+        display: flex
+        width: 150px
+        top: 20px
+        margin: 0
+        left: 50%
+        transform: translate(-50%)
+      &__search
+        width: 100%
+        padding: 9px 12px
+        &-svgmob
+          display: flex
+          width: 41px
+          height: 30px
+          fill: $color24
+          margin-right: 12px
+        &-prompt
+          width: 100%
+          border-right: none
+          p
+            overflow-x: hidden
+            white-space: nowrap
+          svg
+            display: none
+        &-types
+          width: 100px
+          margin-left: 12px
+          justify-content: end
+          img
+            display: none
+          svg
+            height: 44px
+            width: 48px
+            padding: 0 12px
+            &:nth-last-child(1)
+              display: none
+            &:nth-last-child(2)
+              display: none
+      &__account
+        display: flex
+        align-items: center
+        margin-right: 0
+        margin-bottom: 22px
+        margin-left: 0
+        width: 100%
+        justify-content: space-between
+        svg
+          display: none
+        .burger
+          display: block
+          padding: 0
+    main
+      background-color: $color22
+      width: 100%
+      margin: 0 auto
+    .filters-google
+      background-color: $color2
+      border-bottom: 1px solid $color8
+      font-family: $font-googleSans
+      padding: 0 8%
+      padding-bottom: 12px
+      margin-bottom: 0
+      &__wrapper
+        padding: 0 0 6px 10px
+        margin-top: 0
+        width: 100%
+        div
+          padding: 0 12px 6px 12px
+          border-bottom: 3px solid rgba(0, 0, 0, 0)
+          font-size: 16px
+          &:first-child
+            padding: 0 10px 5px 10px
+            color: #111
+            border-bottom: 1 solid rgba(0, 0, 0, 0)
+    .result-google
+      width: 768px
+      margin: 0 auto
+      &__wrapper
+        background-color: $color2
+        margin: 0
+      &__item
+        width: 100%
+      &__fiq
+        width: 100%
+        background-color: $color2
+    .also-google
+      width: 768px
+      margin: 0 auto
+      background-color: $color2
+      &__wrapper
+        margin-top: 5px
+        padding-top: 37px
+    .footer-google
+      height: 133px
+      margin: 0 auto
+      padding-top: 68px
+      align-items: center
+
+@media screen and (max-width: 980px) and (orientation: landscape)
+  .box-google
+    .filters-google
+      padding: 0 2%
+
+@media screen and (max-width: 894px) and (orientation: landscape)
+  .box-google
+    .filters-google
+      padding: 0
+
 @media screen and (max-width: 853px) and (orientation: portrait)
   .box-google
     .header-search
@@ -35,8 +159,6 @@
         &-types
           width: 225px
 
-@media screen and (max-width: 743px)
-  
 
 @media screen and (max-width: 645px) and (orientation: portrait)
   .box-google
