--- a/front/sass/media.sass
+++ b/front/sass/media.sass
@@ -27,7 +27,7 @@
         &__wrapper
           width: 1111px
 
-@media screen and (max-width: 1040px) and (orientation: landscape)
+@media screen and (max-width: 1040px) and (min-height: 501px) and (orientation: landscape)
   .box-google
     .container-google
       padding: 0
@@ -141,12 +141,12 @@
       padding-top: 68px
       align-items: center
 
-@media screen and (max-width: 980px) and (orientation: landscape)
+@media screen and (max-width: 980px) and (min-height: 501px) and (orientation: landscape)
   .box-google
     .filters-google
       padding: 0 2%
 
-@media screen and (max-width: 894px) and (orientation: landscape)
+@media screen and (max-width: 894px) and (min-height: 501px) and (orientation: landscape)
   .box-google
     .filters-google
       padding: 0
